<resources>
    <string name="app_name">Fortis Shisha</string>
    <string name="title_main_menu">Магазин</string>
    <string name="title_hookah_list">Кальяны</string>
    <string name="title_tobacco_list">Табаки</string>
    <string name="title_coal_list">Угли</string>
    <string name="title_hookah_order">Кальян с забивкой</string>
    <string name="order">Заказать</string>
    <string name="more">больше</string>
    <string name="profile">Пользователь</string>
    <string name="check_out">Корзина</string>
    <string name="trigger_layout_profile">Изменить</string>
    <string name="phone_number_hint">Номер телефона</string>
    <string name="user_name_hint">Имя</string>
    <string name="agreement">Даю согласие на обработку данных и подтвеждаю что мне исполнилось 21 лет</string>
    <string name="next_button">далее</string>
    <string name="save_button">обновить</string>
    <string name="street_name_hint">Улица</string>
    <string name="apartment_number">Дом</string>
    <string name="house_number">Кв</string>
    <string name="user_name_label">Имя:</string>
    <string name="phone_number_label">Номер телефона:</string>
    <string name="address_label">Адрес:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>