<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.EnterActivity"
    android:background="@color/colorPrimaryDark"
    android:padding="16dp"
    android:layout_gravity="center_horizontal|center_vertical">

    <EditText
        android:id="@+id/userNameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:fontFamily="@font/roboto_light"
        android:hint="@string/user_name_hint"
        android:inputType="text"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorSecondaryText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UnusedAttribute"
        android:autofillHints="" />

    <EditText
        android:id="@+id/phoneNumberTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/colorAccent"
        android:fontFamily="@font/roboto_light"
        android:hint="@string/phone_number_hint"
        android:inputType="phone"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorSecondaryText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNameTextView"
        tools:ignore="UnusedAttribute"
        android:autofillHints="" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/ageCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:checked="false"
        android:fontFamily="@font/roboto_thin"
        android:text="@string/agreement"
        android:textColor="@color/colorText"
        app:buttonTint="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumberTextView"
        tools:ignore="UnusedAttribute" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/company_logo"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/btEnter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:alpha="0.8"
        android:background="@drawable/enter_button"
        android:backgroundTint="@color/colorAccent"
        android:enabled="false"
        android:fontFamily="@font/roboto_medium"
        android:hapticFeedbackEnabled="false"
        android:text="@string/next_button"
        android:textColor="@color/colorText"
        android:textColorHighlight="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UnusedAttribute" />

</androidx.constraintlayout.widget.ConstraintLayout>